Sources/Urkel/Parser/UrkelFileParser.swift
import Foundation

// MARK: - Parse Error

/// Parse error produced by the v2 Urkel parser.
public struct UrkelParseError: Error, LocalizedError, Sendable, Equatable {
    public let message: String
    public let line: Int
    public let column: Int?

    public init(message: String, line: Int = 0, column: Int? = nil) {
        self.message = message
        self.line = line
        self.column = column
    }

    public var errorDescription: String? {
        if let column {
            return "Parse error at line \(line), column \(column): \(message)"
        }
        return "Parse error at line \(line): \(message)"
    }
}

// MARK: - Public Parser API

/// The v2 Urkel parser — produces a `UrkelFile` from `.urkel` source text.
public struct UrkelParser {
    public init() {}

    /// Parse `.urkel` source text into a `UrkelFile` AST.
    public static func parse(_ source: String) throws -> UrkelFile {
        try UrkelParser().parse(source: source, machineNameFallback: nil)
    }

    /// Instance parse method — for compatibility with generator.
    public func parse(source: String, machineNameFallback: String? = nil) throws -> UrkelFile {
        var impl = LineOrientedParser(source: source, machineNameFallback: machineNameFallback)
        return try impl.parse()
    }

    /// Format source text in canonical form (re-parse and re-print).
    public func format(_ source: String) -> String {
        guard let file = try? parse(source: source) else { return source }
        return printFile(file)
    }

    /// Canonical printer for a `UrkelFile`.
    public func printFile(_ file: UrkelFile) -> String {
        var lines: [String] = []

        if let ctx = file.contextType {
            lines.append("machine \(file.machineName): \(ctx)")
        } else {
            lines.append("machine \(file.machineName)")
        }

        for imp in file.imports {
            if let from = imp.from {
                lines.append("@import \(imp.name) from \(from)")
            } else {
                lines.append("@import \(imp.name)")
            }
        }

        lines.append("@states")
        for state in file.states {
            lines.append(printStateDecl(state, indent: "  "))
        }

        for hook in file.entryExitHooks {
            let actions = hook.actions.joined(separator: ", ")
            lines.append("@\(hook.hook.rawValue) \(hook.state.name) / \(actions)")
        }

        if !file.transitions.isEmpty {
            lines.append("@transitions")
            for t in file.transitions {
                switch t {
                case .transition(let ts):
                    lines.append("  \(printTransitionStmt(ts))")
                case .reactive(let rs):
                    lines.append("  \(printReactiveStmt(rs))")
                }
            }
        }

        return lines.joined(separator: "\n")
    }

    private func printStateDecl(_ decl: StateDecl, indent: String) -> String {
        switch decl {
        case .simple(let s):
            return indent + printSimpleState(s)
        case .compound(let c):
            var ls = ["\(indent)state \(c.name) {"]
            for child in c.children { ls.append("\(indent)  \(printSimpleState(child))") }
            ls.append("\(indent)}")
            return ls.joined(separator: "\n")
        }
    }

    private func printSimpleState(_ s: SimpleStateDecl) -> String {
        if s.params.isEmpty { return "\(s.kind.rawValue) \(s.name)" }
        let ps = s.params.map { "\($0.label): \($0.typeExpr)" }.joined(separator: ", ")
        switch s.kind {
        case .state:         return "state \(s.name)(\(ps))"
        case .`init`, .final: return "\(s.kind.rawValue)(\(ps)) \(s.name)"
        }
    }

    private func printTransitionStmt(_ t: TransitionStmt) -> String {
        var parts: [String] = []
        switch t.source {
        case .state(let r): parts.append(r.name)
        case .wildcard:     parts.append("*")
        }
        let arrowStr = t.arrow == .standard ? "->" : "-*>"
        var eventStr: String
        switch t.event {
        case .event(let e):
            if e.params.isEmpty {
                eventStr = e.name
            } else {
                let ps = e.params.map { "\($0.label): \($0.typeExpr)" }.joined(separator: ", ")
                eventStr = "\(e.name)(\(ps))"
            }
        case .timer(let tm):
            eventStr = "after(\(tm.duration.value)\(tm.duration.unit.rawValue))"
        case .always:
            eventStr = "always"
        }
        parts.append("\(arrowStr) \(eventStr)")
        if let g = t.guard {
            switch g {
            case .named(let n):   parts.append("[\(n)]")
            case .negated(let n): parts.append("[!\(n)]")
            case .else:           parts.append("[else]")
            }
        }
        if let dest = t.destination { parts.append("-> \(dest.name)") }
        if let f = t.fork { parts.append("=> \(f.machine).init") }
        if let a = t.action { parts.append("/ \(a.actions.joined(separator: ", "))") }
        return parts.joined(separator: " ")
    }

    private func printReactiveStmt(_ r: ReactiveStmt) -> String {
        let targetStr: String
        switch r.source.target {
        case .machine(let m): targetStr = m
        case .region(let p, let rg): targetStr = "\(p).\(rg)"
        }
        let stateStr: String
        switch r.source.state {
        case .named(let n): stateStr = n
        case .`init`:       stateStr = "init"
        case .final:        stateStr = "final"
        case .any:          stateStr = "*"
        }
        let own = r.ownState.map { ", \($0)" } ?? ""
        let arrowStr = r.arrow == .standard ? "->" : "-*>"
        let destStr = r.destination.map { " \($0.name)" } ?? ""
        let actionStr = r.action.map { " / \($0.actions.joined(separator: ", "))" } ?? ""
        return "@on \(targetStr)::\(stateStr)\(own) \(arrowStr)\(destStr)\(actionStr)"
    }
}

// MARK: - Line-Oriented Parser Implementation

private struct LineOrientedParser {
    let lines: [String]
    let machineNameFallback: String?

    init(source: String, machineNameFallback: String?) {
        self.lines = source
            .replacingOccurrences(of: "\r\n", with: "\n")
            .components(separatedBy: "\n")
        self.machineNameFallback = machineNameFallback
    }

    private enum Section {
        case preamble, states, transitions, invariants
        case parallelStates, parallelTransitions
    }

    mutating func parse() throws -> UrkelFile {
        var machineName = machineNameFallback ?? "Machine"
        var contextType: String?
        var pendingDocComments: [DocComment] = []
        var imports: [ImportDecl] = []
        var states: [StateDecl] = []
        var transitions: [TransitionDecl] = []
        var entryExitHooks: [EntryExitDecl] = []
        var section: Section = .preamble
        var machineDocComments: [DocComment] = []

        // Parallel tracking
        var parallels: [ParallelDecl] = []
        var inParallel = false
        var currentParallelName = ""
        var currentParallelDocs: [DocComment] = []
        var currentParallelRegions: [RegionDecl] = []
        var currentRegionName = ""
        var currentRegionStates: [StateDecl] = []
        var currentRegionTransitions: [TransitionStmt] = []

        func finalizeRegion() {
            guard !currentRegionName.isEmpty else { return }
            currentParallelRegions.append(RegionDecl(
                name: currentRegionName,
                states: currentRegionStates,
                transitions: currentRegionTransitions
            ))
            currentRegionName = ""
            currentRegionStates = []
            currentRegionTransitions = []
        }

        func finalizeParallel() {
            finalizeRegion()
            guard !currentParallelName.isEmpty else { return }
            parallels.append(ParallelDecl(
                name: currentParallelName,
                regions: currentParallelRegions,
                docComments: currentParallelDocs
            ))
            inParallel = false
            currentParallelName = ""
            currentParallelRegions = []
            currentParallelDocs = []
        }

        for (idx, rawLine) in lines.enumerated() {
            let lineNum = idx + 1
            let trimmed = rawLine.trimmingCharacters(in: .whitespaces)
            let indent = rawLine.prefix(while: { $0 == " " }).count

            if trimmed.isEmpty { continue }

            // Doc comments
            if trimmed.hasPrefix("## ") {
                pendingDocComments.append(DocComment(text: String(trimmed.dropFirst(3))))
                continue
            }
            if trimmed.hasPrefix("##") {
                pendingDocComments.append(DocComment(text: String(trimmed.dropFirst(2)).trimmingCharacters(in: .whitespaces)))
                continue
            }
            // Regular comments
            if trimmed.hasPrefix("#") { continue }

            // @parallel block opener
            if trimmed.hasPrefix("@parallel ") {
                if inParallel { finalizeParallel() }
                currentParallelName = String(trimmed.dropFirst("@parallel ".count))
                    .trimmingCharacters(in: .whitespaces)
                currentParallelDocs = pendingDocComments
                pendingDocComments.removeAll()
                inParallel = true
                section = .preamble
                continue
            }

            // region header inside @parallel
            if inParallel && trimmed.hasPrefix("region ") {
                finalizeRegion()
                currentRegionName = String(trimmed.dropFirst("region ".count))
                    .trimmingCharacters(in: .whitespaces)
                pendingDocComments.removeAll()
                continue
            }

            // Section headers — route based on indentation
            if trimmed == "@states" || trimmed.hasPrefix("@states ") {
                if inParallel && indent > 0 {
                    section = .parallelStates
                } else {
                    if inParallel { finalizeParallel() }
                    section = .states
                }
                pendingDocComments.removeAll()
                continue
            }
            if trimmed == "@transitions" || trimmed.hasPrefix("@transitions ") {
                if inParallel && indent > 0 {
                    section = .parallelTransitions
                } else {
                    if inParallel { finalizeParallel() }
                    section = .transitions
                }
                pendingDocComments.removeAll()
                continue
            }
            if trimmed == "@invariants" {
                if inParallel { finalizeParallel() }
                section = .invariants
                continue
            }

            // @import (can appear in preamble or before states block)
            if trimmed.hasPrefix("@import ") {
                let rest = String(trimmed.dropFirst("@import ".count)).trimmingCharacters(in: .whitespaces)
                imports.append(try parseImport(rest, line: lineNum))
                pendingDocComments.removeAll()
                continue
            }

            // @entry / @exit hooks
            if trimmed.hasPrefix("@entry ") || trimmed.hasPrefix("@exit ") {
                if inParallel { finalizeParallel() }
                entryExitHooks.append(try parseEntryExit(trimmed, line: lineNum))
                pendingDocComments.removeAll()
                continue
            }

            // @on reactive transition — always at outer level; close parallel first
            if trimmed.hasPrefix("@on ") {
                if inParallel { finalizeParallel() }
                section = .transitions
                let docs = pendingDocComments
                pendingDocComments.removeAll()
                if let decl = try parseTransitionDecl(trimmed, line: lineNum, docComments: docs) {
                    transitions.append(decl)
                }
                continue
            }

            // Silently ignore v1-only directives
            if trimmed.hasPrefix("@compose ") || trimmed.hasPrefix("@factory") ||
               trimmed.hasPrefix("@continuation") || trimmed.hasPrefix("@history") {
                pendingDocComments.removeAll()
                continue
            }

            switch section {
            case .preamble:
                if trimmed.hasPrefix("machine") {
                    if inParallel { finalizeParallel() }
                    let rest = String(trimmed.dropFirst("machine".count)).trimmingCharacters(in: .whitespaces)
                    (machineName, contextType) = parseMachineDecl(rest, fallback: machineNameFallback)
                    machineDocComments = pendingDocComments
                    pendingDocComments.removeAll()
                }
            case .states:
                let docs = pendingDocComments
                pendingDocComments.removeAll()
                if let decl = try parseStateDecl(trimmed, line: lineNum, docComments: docs) {
                    states.append(decl)
                }
            case .transitions:
                let docs = pendingDocComments
                pendingDocComments.removeAll()
                if let decl = try parseTransitionDecl(trimmed, line: lineNum, docComments: docs) {
                    transitions.append(decl)
                }
            case .parallelStates:
                let docs = pendingDocComments
                pendingDocComments.removeAll()
                if let decl = try parseStateDecl(trimmed, line: lineNum, docComments: docs) {
                    currentRegionStates.append(decl)
                }
            case .parallelTransitions:
                let docs = pendingDocComments
                pendingDocComments.removeAll()
                if let decl = try parseTransitionDecl(trimmed, line: lineNum, docComments: docs) {
                    if case .transition(let t) = decl {
                        currentRegionTransitions.append(t)
                    }
                }
            case .invariants:
                pendingDocComments.removeAll()
            }
        }

        // Close any open parallel block
        if inParallel { finalizeParallel() }

        return UrkelFile(
            machineName: machineName,
            contextType: contextType,
            docComments: machineDocComments,
            imports: imports,
            parallels: parallels,
            states: states,
            entryExitHooks: entryExitHooks,
            transitions: transitions
        )
    }

    // MARK: - Preamble

    func parseMachineDecl(_ rest: String, fallback: String?) -> (String, String?) {
        if rest.isEmpty { return (fallback ?? "Machine", nil) }
        // "Name" or "Name: Context"
        if let colonIdx = rest.firstIndex(of: ":") {
            let name = String(rest[..<colonIdx]).trimmingCharacters(in: .whitespaces)
            let ctx  = String(rest[rest.index(after: colonIdx)...]).trimmingCharacters(in: .whitespaces)
            return (name.isEmpty ? (fallback ?? "Machine") : name, ctx.isEmpty ? nil : ctx)
        }
        let name = rest.trimmingCharacters(in: .whitespaces)
        return (name.isEmpty ? (fallback ?? "Machine") : name, nil)
    }

    func parseImport(_ rest: String, line: Int) throws -> ImportDecl {
        let parts = rest.components(separatedBy: .whitespaces).filter { !$0.isEmpty }
        guard let name = parts.first, !name.isEmpty else {
            throw UrkelParseError(message: "Expected import name", line: line)
        }
        var from: String? = nil
        if parts.count >= 3 && parts[1] == "from" { from = parts[2] }
        return ImportDecl(name: name, from: from)
    }

    func parseEntryExit(_ trimmed: String, line: Int) throws -> EntryExitDecl {
        let isEntry = trimmed.hasPrefix("@entry")
        let dropCount = isEntry ? "@entry ".count : "@exit ".count
        let rest = String(trimmed.dropFirst(dropCount)).trimmingCharacters(in: .whitespaces)
        let slashParts = rest.components(separatedBy: "/")
        guard slashParts.count >= 2 else {
            throw UrkelParseError(message: "Expected '/' in @\(isEntry ? "entry" : "exit") hook", line: line)
        }
        let stateName = slashParts[0].trimmingCharacters(in: .whitespaces)
        let actionStr = slashParts[1...].joined(separator: "/").trimmingCharacters(in: .whitespaces)
        let actions   = actionStr.components(separatedBy: ",").map { $0.trimmingCharacters(in: .whitespaces) }.filter { !$0.isEmpty }
        return EntryExitDecl(
            hook: isEntry ? .entry : .exit,
            state: StateRef(stateName.components(separatedBy: ".")),
            actions: actions
        )
    }

    // MARK: - States

    func parseStateDecl(_ trimmed: String, line: Int, docComments: [DocComment]) throws -> StateDecl? {
        if trimmed.hasPrefix("init") && (trimmed.count == 4 || !trimmed[trimmed.index(trimmed.startIndex, offsetBy: 4)].isLetter) {
            return try parseInitOrFinalState(trimmed, kind: .`init`, line: line, docComments: docComments)
        }
        if trimmed.hasPrefix("final") && (trimmed.count == 5 || !trimmed[trimmed.index(trimmed.startIndex, offsetBy: 5)].isLetter) {
            return try parseInitOrFinalState(trimmed, kind: .final, line: line, docComments: docComments)
        }
        if trimmed.hasPrefix("state ") || trimmed == "state" {
            return try parseRegularOrCompoundState(trimmed, line: line, docComments: docComments)
        }
        return nil
    }

    func parseInitOrFinalState(_ trimmed: String, kind: StateKind, line: Int, docComments: [DocComment]) throws -> StateDecl {
        let keyword = kind.rawValue
        var rest = String(trimmed.dropFirst(keyword.count)).trimmingCharacters(in: .whitespaces)

        var params: [Parameter] = []
        if rest.hasPrefix("(") {
            let (p, after) = try parseParamList(rest, line: line)
            params = p
            rest = after.trimmingCharacters(in: .whitespaces)
        }

        let parts = rest.components(separatedBy: .whitespaces).filter { !$0.isEmpty }
        guard let name = parts.first, !name.isEmpty else {
            throw UrkelParseError(message: "Expected state name after '\(keyword)'", line: line)
        }

        var history: HistoryModifier? = nil
        if rest.contains("@history") { history = rest.contains("(deep)") ? .deep : .shallow }

        return .simple(SimpleStateDecl(kind: kind, params: params, name: name, history: history, docComments: docComments))
    }

    func parseRegularOrCompoundState(_ trimmed: String, line: Int, docComments: [DocComment]) throws -> StateDecl {
        var rest = String(trimmed.dropFirst("state".count)).trimmingCharacters(in: .whitespaces)

        // Compound: "state Name {"
        if rest.hasSuffix("{") {
            let name = String(rest.dropLast()).trimmingCharacters(in: .whitespaces)
            return .compound(CompoundStateDecl(name: name, docComments: docComments))
        }

        // Parse name
        let nameEnd = rest.firstIndex(where: { c in !c.isLetter && !c.isNumber && c != "_" }) ?? rest.endIndex
        let name = String(rest[..<nameEnd])
        guard !name.isEmpty else {
            throw UrkelParseError(message: "Expected state name after 'state'", line: line)
        }
        rest = String(rest[nameEnd...]).trimmingCharacters(in: .whitespaces)

        var params: [Parameter] = []
        if rest.hasPrefix("(") {
            let (p, after) = try parseParamList(rest, line: line)
            params = p
            rest = after.trimmingCharacters(in: .whitespaces)
        }

        var history: HistoryModifier? = nil
        if rest.hasPrefix("@history") { history = rest.contains("(deep)") ? .deep : .shallow }

        return .simple(SimpleStateDecl(kind: .state, params: params, name: name, history: history, docComments: docComments))
    }

    // MARK: - Transitions

    func parseTransitionDecl(_ trimmed: String, line: Int, docComments: [DocComment]) throws -> TransitionDecl? {
        if trimmed.hasPrefix("@on ") {
            return try parseReactiveStmt(trimmed, line: line, docComments: docComments)
        }

        // Parse source (state name or *)
        let source: TransitionSource
        var rest: String

        if trimmed.hasPrefix("*") {
            source = .wildcard
            rest = String(trimmed.dropFirst()).trimmingCharacters(in: .whitespaces)
        } else {
            let i = trimmed.firstIndex(where: { c in !c.isLetter && !c.isNumber && c != "_" && c != "." }) ?? trimmed.endIndex
            let stateName = String(trimmed[..<i])
            guard !stateName.isEmpty else { return nil }
            source = .state(StateRef(stateName.components(separatedBy: ".")))
            rest = String(trimmed[i...]).trimmingCharacters(in: .whitespaces)
        }

        // Parse first arrow
        let arrow: Arrow
        if rest.hasPrefix("-*>") {
            arrow = .internal
            rest = String(rest.dropFirst(3)).trimmingCharacters(in: .whitespaces)
        } else if rest.hasPrefix("->") {
            arrow = .standard
            rest = String(rest.dropFirst(2)).trimmingCharacters(in: .whitespaces)
        } else {
            return nil
        }

        guard !rest.isEmpty else {
            throw UrkelParseError(
                message: "Transition must follow: Source -> event -> Dest",
                line: line
            )
        }

        // Parse event / timer / always
        let event: EventOrTimer
        if rest.hasPrefix("after(") || rest.hasPrefix("after (") {
            let (e, after) = try parseTimer(rest, line: line)
            event = e
            rest = after.trimmingCharacters(in: .whitespaces)
        } else if rest.hasPrefix("always") {
            let idx6 = rest.index(rest.startIndex, offsetBy: min(6, rest.count))
            let nextChar = idx6 < rest.endIndex ? rest[idx6] : " "
            if nextChar.isWhitespace || idx6 == rest.endIndex || nextChar == "[" || nextChar == "/" {
                event = .always
                rest = String(rest.dropFirst("always".count)).trimmingCharacters(in: .whitespaces)
            } else {
                let (e, after) = try parseEvent(rest, line: line)
                event = e
                rest = after.trimmingCharacters(in: .whitespaces)
            }
        } else {
            let (e, after) = try parseEvent(rest, line: line)
            event = e
            rest = after.trimmingCharacters(in: .whitespaces)
        }

        // Optional guard [guardName] | [!guardName] | [else]
        var guardClause: GuardClause? = nil
        if rest.hasPrefix("[") {
            let (g, after) = try parseGuardClause(rest, line: line)
            guardClause = g
            rest = after.trimmingCharacters(in: .whitespaces)
        }

        // Optional -> Dest [=> Machine.init]
        var destination: StateRef? = nil
        var forkClause: ForkClause? = nil
        if rest.hasPrefix("->") {
            rest = String(rest.dropFirst(2)).trimmingCharacters(in: .whitespaces)
            let i = rest.firstIndex(where: { c in !c.isLetter && !c.isNumber && c != "_" && c != "." }) ?? rest.endIndex
            let destName = String(rest[..<i])
            if !destName.isEmpty {
                destination = StateRef(destName.components(separatedBy: "."))
                rest = String(rest[i...]).trimmingCharacters(in: .whitespaces)
            }
            if rest.hasPrefix("=>") {
                let (f, after) = try parseForkClause(rest, line: line)
                forkClause = f
                rest = after.trimmingCharacters(in: .whitespaces)
            }
        }

        // Optional / action1, action2
        var actionClause: ActionClause? = nil
        if rest.hasPrefix("/") {
            let actionStr = String(rest.dropFirst()).trimmingCharacters(in: .whitespaces)
            let actions = actionStr.components(separatedBy: ",")
                .map { $0.trimmingCharacters(in: .whitespaces) }
                .filter { !$0.isEmpty }
            if !actions.isEmpty { actionClause = ActionClause(actions: actions) }
        }

        return .transition(TransitionStmt(
            source: source,
            arrow: arrow,
            event: event,
            guard: guardClause,
            destination: destination,
            fork: forkClause,
            action: actionClause,
            docComments: docComments
        ))
    }
